# MillitaryPolygon

./: CMakeLists.txt  README.md
Headers/: Model.h  func.h  globals.h
Shaders/: fs.glsl
Sources/: Model.cpp  func.cpp  main.cpp
